--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
          <div class="col full">
 
             <div class="logo">
-               <a href="#"><img alt="" src="images/logo.png"></a>
+               <a href="#"><img alt="" src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200119/logo_r3ft9u.png"></a>
             </div>
 
             <nav id="nav-wrap">
@@ -197,7 +197,7 @@
 
 			   <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-01"><img src="images/portfolio/cosmic-sneakers.jpg" alt=""/></a>
+					   <a href="#" data-reveal-id="modal-01"><img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200123/cosmic-sneakers_aly6i1.jpg" alt=""/></a>
 					   <div class="portfolio-item-meta">
 						   <h5><a href="#">GWGMP Cooking</a></h5>
 					   </div>
@@ -206,7 +206,7 @@
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-02"><img src="images/portfolio/milk-splash.jpg" alt=""/></a>
+					   <a href="#" data-reveal-id="modal-02"><img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200123/milk-splash_bkdq63.jpg" alt=""/></a>
 					   <div class="portfolio-item-meta">
 						   <h5><a href="#">Plutus</a></h5>
 					   </div>
@@ -215,7 +215,7 @@
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-03"><img src="images/portfolio/eve.jpg" alt=""/></a>
+					   <a href="#" data-reveal-id="modal-03"><img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200124/m-eve_rthyza.jpg" alt=""/></a>
 					   <div class="portfolio-item-meta">
 						   <h5><a href="#">Ether</a></h5>
 					   </div>
@@ -224,7 +224,7 @@
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-04"><img src="images/portfolio/sneaker-splash.jpg" alt=""/></a>
+					   <a href="#" data-reveal-id="modal-04"><img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200126/sneaker-splash_hgde8a.jpg" alt=""/></a>
 					   <div class="portfolio-item-meta">
 						   <h5><a href="#">Profetic</a></h5>
 					   </div>
@@ -233,7 +233,7 @@
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-05"><img src="images/portfolio/judah.jpg" alt=""/></a>
+					   <a href="#" data-reveal-id="modal-05"><img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200125/m-judah_lhqcem.jpg" alt=""/></a>
 					   <div class="portfolio-item-meta">
 						   <h5><a href="#">Talayana</a></h5>
 					   </div>
@@ -242,7 +242,7 @@
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-06"><img src="images/portfolio/vector-flower.jpg" alt=""/></a>
+					   <a href="#" data-reveal-id="modal-06"><img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200125/m-vector-flower_sy2xhn.jpg" alt=""/></a>
 					   <div class="portfolio-item-meta">
 						   <h5><a href="#">Pyramids</a></h5>
 					   </div>
@@ -251,7 +251,7 @@
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-07"><img src="images/portfolio/clock.jpg" alt=""/></a>
+					   <a href="#" data-reveal-id="modal-07"><img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200121/clock_osoenf.jpg" alt=""/></a>
 					   <div class="portfolio-item-meta">
 						   <h5><a href="#">Diamonds</a></h5>
 					   </div>
@@ -260,7 +260,7 @@
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-08"><img src="images/portfolio/fields.jpg" alt=""/></a>
+					   <a href="#" data-reveal-id="modal-08"><img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200125/m-fields_t0yi46.jpg" alt=""/></a>
 					   <div class="portfolio-item-meta">
 						   <h5><a href="#">HVD</a></h5>
 					   </div>
@@ -442,7 +442,7 @@
             <div class="row entry-header">
 
                <div class="author-image">
-                  <img src="images/user-01.jpg" alt="Empire Trap-Rolls Royce" />
+                  <img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200127/user-01_q2afj9.jpg" alt="Empire Trap-Rolls Royce" />
                </div>
 
                <div class="col g-9 offset-1 entry-title">
@@ -478,7 +478,7 @@
             <div class="row entry-header">
 
                <div class="author-image">
-                  <img src="images/user-02.jpg" alt="Boom Bap Girl" />
+                  <img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200127/user-02_y1cgma.png" alt="Boom Bap Girl" />
                </div>
 
                <div class="col g-9 offset-1 entry-title">
@@ -511,7 +511,7 @@
             <div class="row entry-header">
 
                <div class="author-image">
-                  <img src="images/user-03.jpg" alt="Bottomless girl" />
+                  <img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200128/user-03_udbhz0.jpg" alt="Bottomless girl" />
                </div>
 
                <div class="col g-9 offset-1 entry-title">
@@ -603,11 +603,11 @@
 
          <div class="col one-fourth">
 
-            <img src="images/team/team-img-01.jpg" alt=""/>
+            <img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200127/team-img-01_voaiwm.jpg" alt=""/>
 
             <div class"member-name">
                <h5>Hvdwiink</h5>
-               <span>Ninja</span>
+               <span>Ninja/Producer</span>
             </div>
 
             <ul class="member-social">
@@ -803,7 +803,7 @@
                   <div>
                      <button class="submit">Submit</button>
                      <span id="image-loader">
-                        <img src="images/loader.gif" alt="" />
+                        <img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200121/loader_lnvtzm.gif" alt="" />
                      </span>
                   </div>
 
