--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 		   </div>
 
          <div class="link-box">
-            <a href="http://www.behance.net">Details</a>
+            <a href="https://soundcloud.com/hvdwiink/plutus">Details</a>
 		      <a class="close-reveal-modal">Close</a>
          </div>
 
