--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
       <!-- modal-01 -->
 	   <div id="modal-01" class="reveal-modal">
 
-		   <img class="scale-with-grid" src="images/portfolio/modals/m-cosmic-sneakers.jpg" alt="" />
+		   <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/335092826&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
 
 		   <div class="description-box">
 			   <h4>GWGM Cooking</h4>
