--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
 
             <h2><a href="http://www.soundcloud.com/hvdwiink">Discover some weird sounds on the Hvd Soundcloud.</a></h2>
             <p>
-                Lets make some <span>fire</span> music . Mastering tracks with <span>GWGB</span>. Take your production to the next level! </p>
+                Let's make some <span>fire</span> music . Mastering tracks with <span>GWGB</span>. Take your production to the next level! </p>
 					
 
          </div>
@@ -840,7 +840,7 @@
             <h3>The Movement</h3>
 
             <p>
-                Lets make the sounds of tommorrow, today.
+                Let's make the sounds of tommorrow, today.
             </p>
 
          </aside>
