--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    ================================================== -->
 	<meta charset="utf-8">
 	<title>GWGM</title>
-	<meta name="description" content="Good Weed Good Music - A Community for mellow hiphop sounds">
+	<meta name="description" content="Good Women Good Men - A Community for mellow hiphop sounds">
 	<meta name="author" content="Hvdwiink : hvdwiink@gmail.com for submissions">
 
    <!-- Mobile Specific Metas
@@ -84,7 +84,7 @@
 				   <div class="row">
 					   <div class="col full">
 						   <div class="slider-text">
-							   <h2>This is <span>GWGM</span>. Good Weed Good Music Productions.</h2>
+							   <h2>This is <span>GWGM</span>. Good Women Good Men Productions.</h2>
                                <p>A hub for mellow/trap music, by indie artists.</br> 
                         Feel free to submit your links to be high-lighted on the site!</p>
 						   </div>
@@ -555,7 +555,7 @@
          </div>
 
          <div class="col three-fourths">
-             <p class="intro">Hvdwiink has been playing with sound design since about 2013 & finishing tracks since late 2015. He has garnished a small following(700 soundcloud followers & 100k+ plays) and is now looking forward to releasing his music under the his newely created label GWGM. Good Weed Good Music Productions is a hub of mellow trippy trap & smooth trancy EDM. We look forward to getting more indie producers on-board to make a bang (& a buck) in the music industry. </p>
+             <p class="intro">Hvdwiink has been playing with sound design since about 2013 & finishing tracks since late 2015. He has garnished a small following(700 soundcloud followers & 100k+ plays) and is now looking forward to releasing his music under the his newely created label GWGM. Good Women Good Men Productions is a hub of mellow trippy trap & smooth trancy EDM. We look forward to getting more indie producers on-board to make a bang (& a buck) in the music industry. </p>
          </div>
       </div>
 
@@ -827,8 +827,8 @@
             <p>Forward any submissions to uglyduckdrop@gmail.com for quick replies.</p>
 
             <p>
-            Good Weed Good Music <br />
-            Younge St. 6666 <br />
+            Good Women Good Men <br />
+            Younge St. 9999 <br />
             ON, Toronto
             </p>
 
