--- a/index.html
+++ b/index.html
@@ -428,8 +428,8 @@
 
       <div class="row section-head">
          <div class="col full">
-            <h2>Sample Packs & Tutorials</h2>
-            <p class="desc">Free trap/edm sample packs</p>
+            <h2>Sample Packs</h2>
+            <p class="desc">Free trap & EDM sample packs | <small><i>Tutorials coming soon</i></small></p>
          </div>
       </div>
 
@@ -824,7 +824,7 @@
 
             <h3>Contact Information</h3>
 
-            <p>Forward any submissions to uglyduckdrop@gmail.com for quick replies.</p>
+             <p>Forward any submissions to : </br> uglyduckdrop@gmail.com for quick replies.</p>
 
             <p>
             Good Women Good Men <br />
@@ -834,13 +834,15 @@
 
             <p>
             
-            Email: info [@] uglyduckdrop@gmail.com
+            Email: <a href="mailto:uglyduckdrop@gmail.com?Subject=Hello%20again" target="_top">uglyduckdrop@gmail.com</a> 
             </p><br />
 
             <h3>The Movement</h3>
 
             <p>
-                Let's make the sounds of tommorrow, today.
+                Let's make the sounds of tommorrow.</br></br>
+                
+                No One Will Help You; help yourself.
             </p>
 
          </aside>
