--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
             <h3>The Movement</h3>
 
             <p>
-                Let's make the sounds of tommorrow.</br></br>
+                Let's make the sounds of tomorrow.</br></br>
                 
                 No One Will Help You; help yourself.
             </p>
