--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
          </div>
 
          <div class="col three-fourths">
-             <p class="intro">Hvdwiink has been playing with sound design since about 2013 & finishing tracks since late 2015. He has garnished a small following(700 soundcloud followers & 100k+ plays) and is now looking forward to releasing his music under the his newely created label GWGM. Good Women Good Men Productions is a hub of mellow trippy trap & smooth trancy EDM. We look forward to getting more indie producers on-board to make a bang (& a buck) in the music industry. </p>
+             <p class="intro">Hvdwiink has been playing with sound design since about 2013 & finishing tracks since late 2015. He has garnished a small following(700 soundcloud followers & 100k+ plays) and is now looking forward to releasing his music under the newely created label GWGM. Good Women Good Men Productions is a hub of mellow trippy trap & smooth trancy EDM. We look forward to getting more indie producers on-board to make a bang (& a buck) in the music industry. </p>
          </div>
       </div>
 
