--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
             <div class="col portfolio-item">
                <div class="item-wrap">
-					   <a href="#" data-reveal-id="modal-04"><img src="http://res.cloudinary.com/ceasarspalace/image/upload/v1501200126/sneaker-splash_hgde8a.jpg" alt=""/></a>
+					   <a href="#" data-reveal-id="modal-04"><img src="https://res.cloudinary.com/ceasarspalace/image/upload/v1501200126/sneaker-splash_hgde8a.jpg" alt=""/></a>
 					   <div class="portfolio-item-meta">
 						   <h5><a href="#">Profetic</a></h5>
 					   </div>
