--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
    <script src="js/smoothscrolling.js"></script>
     
 
-    <!-- Whos script --> <div style="visibility: hidden">
+    <!-- Whos script --> <div style="visibility: hidden; z-index: -1">
     <script id="_wauntp">var _wau = _wau || []; _wau.push(["classic", "84wpmx1df7u0", "ntp"]);
                     (function() {var s=document.createElement("script"); s.async=true;
                      s.src="//widgets.amung.us/classic.js";
